--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -1,18 +1,23 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【更新4.2】俄导弹袭乌克兰中部两城市</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/04/id13690964-000_327G2D4-600x400.jpg" />
-<h6>图为一名乌克兰士兵4月1日在基辅郊区走在被摧毁的俄罗斯坦克附近。(RONALDO SCHEMIDT / AFP)
+<tr><td VALIGN=TOP width="626"><h2 align=center>【更新4.2】乌国防高官：基辅已摆脱俄军控制</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2022/04/id13691415-GettyImages-1239694185-600x400.jpg" />
+<h6>2022年4月2日，在基辅西北部的布卡（Bucha），一名老年妇女在拥抱一名乌克兰士兵。乌克兰国防部副部长当天说，在俄军从首都附近一些重要城镇撤退后，乌方已重新控制整个基辅地区。(RONALDO SCHEMIDT/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2022年04月02日讯】（大纪元记者张婷综合报导）周六（4月2日），<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89.md#1">俄乌战争</a>进入第38天。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>方面称，俄军导弹袭击了中部地区的两个城市，破坏了基础设施和建筑。乌克兰总统泽连斯基证实，俄军正缓慢撤出北部部分地区。</p>
+	<p>【大纪元2022年04月02日讯】（大纪元记者张婷、李言综合报导）周六（4月2日），<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89.md#1">俄乌战争</a>进入第38天。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>方面称，俄军导弹袭击了中部地区的两个城市，破坏了基础设施和建筑。乌克兰总统泽连斯基证实，俄军正缓慢撤出北部部分地区。</p>
 <p>欧盟经济专员保罗?真蒂洛尼（Paolo Gentiloni）说，欧盟正在着手准备对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>实施进一步制裁，但这些额外措施不会影响能源产业。</p>
 <p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>副总理伊琳娜?韦列修克（Iryna Vereshchuk）表示，乌克兰周六将开设七个人道主义走廊，用于从被俄军围困地区撤离民众。</p>
 <figure id="attachment_13690977" aria-describedby="caption-attachment-13690977" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/04/id13690977-000_327G6AH.jpg"><img class="size-large wp-image-13690977" src="https://i.epochtimes.com/assets/uploads/2022/04/id13690977-000_327G6AH-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13690977" class="wp-caption-text">2022年4月1日，由30辆巴士组成的车队载着从马里乌波尔和梅利托波尔撤离的人员抵达扎波罗热的登记中心。(emre caylak / AFP)</figcaption></figure>
 <p>英国国防部在情报更新中说，“经过激烈战斗，乌克兰军队在哈尔科夫东部获得了一条关键路线。”</p>
 <p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>周五指控乌军直升机越境，空袭了俄边境城市的一个燃料库，导致大火。周六，俄军宣称，使用了“高精度远程空基和海基武器”击中了位于乌克兰中部城市克雷门丘克（Kremenchuk）的炼油厂。</p>
 <h2>以下是4月2日俄乌局势实时更新：</h2>
+<h3>乌国防高官：基辅地区已摆脱俄军控制</h3>
+<figure id="attachment_13691414" aria-describedby="caption-attachment-13691414" style="width: 572px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/04/id13691414-GettyImages-1239694133.jpg"><img class="size-medium_vertical wp-image-13691414" src="https://i.epochtimes.com/assets/uploads/2022/04/id13691414-GettyImages-1239694133-572x400.jpg" alt="" width="572" b="400" /></a><figcaption id="caption-attachment-13691414" class="wp-caption-text">2022年4月2日，一名乌克兰士兵乘坐装甲车在基辅西北部的布卡（Bucha）街道上巡逻。乌克兰国防部副部长当天说，在俄军从首都附近一些重要城镇撤退后，乌方已重新控制整个基辅地区。(RONALDO SCHEMIDT/AFP via Getty Images)</figcaption></figure>
+<p>乌克兰国防部副部长汉娜·玛丽亚（Hanna Maliar）周六说，基辅地区已经摆脱俄军控制。</p>
+<p>她在脸书上发文说，布卡（或译步查，Bucha）、伊尔平（Irpin）、霍斯托梅尔（Hostomel）和“整个基辅地区都从入侵者手中获得解脱”。</p>
+<p>CNN无法立即证实是否乌军将俄军从整个基辅地区清除了出去。但乌军最近几天已经重新控制了首都周围的郊区，而这些郊区仍在政府控制之下。俄军表示，在基辅周围的军事行动正在“降级”。</p>
 <h3>乌官员：俄导弹袭击了乌中部两个城市</h3>
 <p>据波尔塔瓦（Poltava）地区负责人说，俄罗斯导弹周六袭击了乌克兰中部的两个城市，破坏了基础设施和住宅建筑。</p>
 <p>“波尔塔瓦，在夜里，一枚导弹击中了其中一个基础设施。”德米特里?卢宁（Dmitry Lunin）在Telegram上说。</p>
@@ -121,13 +126,13 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689482.md#1">俄石油公司燃料库发生大火 视频曝光</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689683.md#1">乌情报：在俄入侵前 中共大规模网攻乌克兰</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691366.md#1">俄乌战影响 大连港到欧洲铁路出口骤降</a></li>
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691176.md#1">法驻沪总领事馆：不要因防疫将父母和孩子分开</a></li>
-<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691105.md#1">俄乌局势 俄航天局长：或终止空间站合作</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10280071.md#1" target="_blank">路目：孔子诛杀少正卯 惹恼了谁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
@@ -148,6 +153,6 @@
 <li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/2/n13690935.htm">【更新4.2】俄导弹袭乌克兰中部两城市</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/4/2/n13690935.htm">【更新4.2】乌国防高官：基辅已摆脱俄军控制</a></p><hr>
 
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690935.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
